--- a/master.css
+++ b/master.css
@@ -41,10 +41,10 @@ h1 {
   font-size: 5rem;
 }
 h2 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 h3 {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 h4 {
   font-size: 2rem;
@@ -53,19 +53,47 @@ img {
   display: block;
   width: 100%;
 }
-a {
-  text-decoration: none;
-  color: var(--white);
-}
 ul {
   list-style: none;
 }
 
 /*navigation styles*/
+nav {
+  width: 100%;
+  background-color: blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.nav-items {
+  display: flex;
+  flex-direction: row;
+}
+nav a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  padding: 2rem 1rem;
+}
+nav a:hover {
+  color: black;
+  background-color: lightblue;
+}
 
-
-/*project section*/
-
+/*main section*/
+main {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+#form-container {
+  background-color: lightblue;
+  width: 60%;
+  max-width: 75rem;
+  margin: 4rem 0;
+  height: 100px;
+}
 /*contact section*/
 
 /* footer styles*/
