--- a/master.css
+++ b/master.css
@@ -32,7 +32,7 @@ html {
 body {
   font-family: Arial, Verdana, sans-serif;
   font-size: 1.6rem;
-  color: var(--white);
+  color: var(--darkgray);
 }
 h1, h2, h3, h4 {
   font-family: inherit;
@@ -56,7 +56,16 @@ img {
 ul {
   list-style: none;
 }
-
+/*header styles*/
+header {
+  background-color: lightgreen;
+  color:white;
+  display: flex;
+  justify-content: center;
+}
+header h2 {
+  margin: 3rem 0;
+}
 /*navigation styles*/
 nav {
   width: 100%;
@@ -87,12 +96,53 @@ main {
   flex-direction: row;
   justify-content: center;
 }
+/*form content*/
 #form-container {
+  font-size: 2rem;
   background-color: lightblue;
-  width: 60%;
+  width: 40%;
   max-width: 75rem;
   margin: 4rem 0;
-  height: 100px;
+  padding: 3rem;
+}
+#calculation_form {
+  display: flex;
+  flex-direction: column;
+}
+.form_row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1rem;
+}
+#mortgage {
+  border: solid 0.1rem black;
+  display: none;
+}
+#rent {
+  border: solid 0.1rem black;
+  display: none;
+}
+.input_field {
+  width: 40%;
+}
+#counciltax_inputs {
+  width: 40%;
+  display: flex;
+  justify-content: space-between;
+}
+.input_field_ct_fig {
+  width: 47.5%;
+}
+.input_field_ct_mtyr {
+  width: 47.5%;
+}
+.submit_button {
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 1rem 0;
 }
 /*contact section*/
 
